# o2scr-ifd

./: .gitignore  Makefile.am  configure.ac  reconf
etc/: Makefile.am  o2scr.in
src/: Makefile.am  ifdhandler.c  o2scr.h
